XMLExper/m12/m12_481_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLElement* tinyxml2::XMLElement::InsertNewChildElement(const char*)’:
tinyxml2.cpp:2055:33: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLElement*’ [-fpermissive]
 2055 |     return InsertEndChild(node) ? /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(node) : 0;
      |            ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                 |
      |                                 tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
